--- a/public/mobile-screen.css
+++ b/public/mobile-screen.css
@@ -1,10 +1,3 @@
-.show-when-mobile {
-  display: block;
-}
-
-.hide-when-mobile {
-  display: none;
-}
 
 /* ====================================
     1. Font Awesom hamburger menu
@@ -59,6 +52,10 @@ label:hover .fas
 {
   color: cyan;
   letter-spacing: 2px;
+}
+
+.a7a.active {
+  letter-spacing: 20px;
 }
 
 .sub-div li a{
